--- a/index.html
+++ b/index.html
@@ -1,1 +1,408 @@
-index
+<!DOCTYPE html>
+<html lang="it" class="skrollr skrollr-desktop">
+
+<head>
+  <title>Progetto DVCS</title>
+  <meta name="description" content="Progetto di sistemi e reti per la gestione di un DVCS">
+  <meta name="keywords" content="DVCS, Distributed Version Control Systems">
+  <meta name="author" content="Belotti, Montanari">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="shortcut icon" href="" type="image/x-icon">
+  <link rel="stylesheet" href="/assets/css/libs.bundle.css">
+  <link rel="stylesheet" href="./assets/css/index.bundle.css">
+</head>
+
+<body class="bg-light">
+  <div class="offcanvas-wrap">
+    <section class="split">
+      <div class="container">
+        <div class="row justify-content-between">
+
+          <div class="col-lg-3 split-sidebar">
+            <!-- table of contents-->
+            <div class="sticky-top">
+              <div class="toc-container">
+                <ul id="toc-nav" class="nav nav-minimal flex-column d-none d-lg-block">
+                  <li class="nav-item">
+                    <a class="nav-link fs-lg" href="#menu-1" data-bs-toggle="collapse" role="button" aria-expanded="false" aria-controls="menu-1">Get Started</a>
+                    <div class="collapse" id="menu-1" data-bs-parent="#toc-nav">
+                      <ul class="nav nav-minimal flex-column">
+                        <li class="nav-item">
+                          <a class="nav-link" href="#introduction">Introduction</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#changelog">Changelog</a>
+                        </li>
+                      </ul>
+                    </div>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link fs-lg" href="#menu-2" data-bs-toggle="collapse" role="button" aria-expanded="false" aria-controls="menu-2">Components</a>
+                    <div class="collapse" id="menu-2" data-bs-parent="#toc-nav">
+                      <ul class="nav nav-minimal flex-column">
+                        <li class="nav-item">
+                          <a class="nav-link" href="#accordion">Accordion</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#alerts">Alerts</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#avatars">Avatars</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#badge">Badge</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#breadcrumb">Breadcrumb</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#buttons">Buttons</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#card">Card</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#carousel">Carousel</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#countdown">Countdown</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#dropdowns">Dropdowns</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#forms">Forms</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#frames">Frames</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#icons">Icons</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#isotope">Isotope</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#lightbox">Lightbox</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#lists">Lists</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#modal">Modal</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#navbar">Navbar</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#smoothscroll">Smoothscroll</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#spinners">Spinners</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#steps">Steps</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#typed">Typed</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#video">Video</a>
+                        </li>
+                      </ul>
+                    </div>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link fs-lg" href="#menu-3" data-bs-toggle="collapse" role="button" aria-expanded="false" aria-controls="menu-3">Utilities</a>
+                    <div class="collapse" id="menu-3" data-bs-parent="#toc-nav">
+                      <ul class="nav nav-minimal flex-column">
+                        <li class="nav-item">
+                          <a class="nav-link" href="#animate-on-scroll">Animate on Scroll</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#sizing">Sizing</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#background">Background</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#shadows">Shadows</a>
+                        </li>
+                      </ul>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+
+          <!-- content -->
+          <div class="col-lg-9 split-content">
+
+            <!-- text -->
+            <section id="introduction" class="pb-5 border-bottom">
+              <h1 class="mb-1">How it works</h1>
+              <p class="lead text-secondary">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores eveniet cumque cupiditate inventore deleniti dolor vitae temporibus maxime, officia velit atque voluptatem id expedita vero enim sint dolorem, sapiente quos!</p>
+            </section>
+
+            <!-- component with code -->
+            <section id="avatars">
+              <h3>Avatars</h3>
+              <p class="text-secondary">Lorem ipsum, dolor sit amet consectetur adipisicing</p>
+
+              <div class="card bg-opaque-white">
+                <div class="card-body bg-white">
+                  <ul class="avatar-list">
+                    <li>
+                      <span class="avatar avatar-lg rounded-circle bg-primary">
+                        <span>JS</span>
+                      </span>
+                    </li>
+                    <li>
+                      <span class="avatar avatar-lg">
+                        <img src="./assets/images/users/user-1.jpg" class="rounded-circle" alt="Avatar">
+                      </span>
+                    </li>
+                    <li>
+                      <span class="avatar avatar-lg">
+                        <img src="./assets/images/users/user-2.jpg" class="rounded-circle" alt="Avatar">
+                      </span>
+                    </li>
+                  </ul>
+                </div>
+                <div class="card-footer">
+                  <script type="text/plain" class="language-css">
+                    body { 
+                      position: relative; 
+                      > section, > footer { 
+                        position: relative; 
+                        margin: 0 auto; 
+                        padding: $section-padding 0; 
+                      } 
+                    }
+                  </script>
+                </div>
+              </div>
+            </section>
+
+            <!-- file structure -->
+            <section id="file-structure">
+              <h3>File Structure</h3>
+
+              <div class="card bg-white">
+                <div class="card-body">
+                  <ul class="file-structure">
+                    <li>
+                      <a data-bs-toggle="collapse" href="#collapse-1" role="button" aria-expanded="true" aria-controls="collapse-1">
+                        Folder<i class="bi bi-info-circle ms-1 text-muted" data-bs-toggle="tooltip" data-bs-placement="top" title="Tooltip on top"></i>
+                      </a>
+                      <ul class="collapse show" id="collapse-1">
+                        <li><span>File</span></li>
+                        <li><span>File</span></li>
+                      </ul>
+                    </li>
+                    <li>
+                      <a data-bs-toggle="collapse" href="#collapse-2" role="button" aria-expanded="true" aria-controls="collapse-2">Folder</a>
+                      <ul class="collapse show" id="collapse-2">
+                        <li>
+                          <a data-bs-toggle="collapse" href="#collapse-3" role="button" aria-expanded="false" aria-controls="collapse-3">Folder</a>
+                          <ul class="collapse" id="collapse-3">
+                            <li><span>File</span></li>
+                            <li><span>File</span></li>
+                            <li><span>File</span></li>
+                          </ul>
+                        </li>
+                        <li>
+                          <span>File</span>
+                        </li>
+                      </ul>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </section>
+
+            <!-- changelog -->
+            <section id="changelog">
+              <h3>Changelog</h3>
+
+              <div class="card bg-white">
+                <div class="card-body">
+                  <div class="d-flex border-bottom pb-4 mb-4">
+                    <div class="col-6">
+                      <span class="badge rounded-pill bg-primary">2.0.1</span>
+                    </div>
+                    <div class="col-6">
+                      <ul class="list-unstyled">
+                        <li>First Item</li>
+                        <li>Second Item</li>
+                      </ul>
+                    </div>
+                  </div>
+                  <div class="d-flex border-bottom pb-4 mb-4">
+                    <div class="col-6">
+                      <span class="badge rounded-pill bg-primary me-1">2.0.0</span>
+                      <small class="text-secondary">1 July, 2020</small>
+                    </div>
+                    <div class="col-6">
+                      <ul class="list-unstyled">
+                        <li>First Item</li>
+                        <li>Second Item</li>
+                      </ul>
+                    </div>
+                  </div>
+                  <div class="d-flex">
+                    <div class="col-6">
+                      <span class="badge rounded-pill border text-black">1.0.1</span>
+                    </div>
+                    <div class="col-6">
+                      <ul class="list-unstyled">
+                        <li>First Item</li>
+                        <li>Second Item</li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </section>
+
+          </div>
+        </div>
+      </div>
+    </section>
+  </div>
+
+  <!-- table of contents - mobile-->
+  <div class="position-fixed bottom-0 end-0 p-2 level-1">
+    <button class="btn btn-white btn-icon d-lg-none rounded-pill shadow" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample" aria-label="Toggle table of contents">
+      <i class="bi bi-justify-right fs-4"></i>
+    </button>
+  </div>
+
+  <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
+    <div class="offcanvas-header">
+      <h5 class="offcanvas-title" id="offcanvasExampleLabel">Table of Contents</h5>
+      <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+    </div>
+    <div class="offcanvas-body">
+      <ul class="nav nav-minimal flex-column" id="toc-mob-nav">
+        <li class="nav-item">
+          <a class="nav-link fs-lg" href="#menu-mob-1" data-bs-toggle="collapse" role="button" aria-expanded="false" aria-controls="menu-mob-1">Get Started</a>
+          <div class="collapse" id="menu-mob-1" data-bs-parent="#toc-mob-nav">
+            <ul class="nav nav-minimal flex-column">
+              <li class="nav-item">
+                <a class="nav-link" href="#introduction">Introduction</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#changelog">Changelog</a>
+              </li>
+            </ul>
+          </div>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link fs-lg" href="#menu-mob-2" data-bs-toggle="collapse" role="button" aria-expanded="false" aria-controls="menu-mob-2">Components</a>
+          <div class="collapse" id="menu-mob-2" data-bs-parent="#toc-mob-nav">
+            <ul class="nav nav-minimal flex-column">
+              <li class="nav-item">
+                <a class="nav-link" href="#accordion">Accordion</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#alerts">Alerts</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#avatars">Avatars</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#badge">Badge</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#breadcrumb">Breadcrumb</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#buttons">Buttons</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#card">Card</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#carousel">Carousel</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#countdown">Countdown</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#dropdowns">Dropdowns</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#forms">Forms</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#frames">Frames</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#icons">Icons</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#isotope">Isotope</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#lightbox">Lightbox</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#lists">Lists</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#modal">Modal</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#navbar">Navbar</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#smoothscroll">Smoothscroll</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#spinners">Spinners</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#steps">Steps</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#typed">Typed</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#video">Video</a>
+              </li>
+            </ul>
+          </div>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link fs-lg" href="#menu-mob-3" data-bs-toggle="collapse" role="button" aria-expanded="false" aria-controls="menu-mob-3">Utilities</a>
+          <div class="collapse" id="menu-mob-3" data-bs-parent="#toc-mob-nav">
+            <ul class="nav nav-minimal flex-column">
+              <li class="nav-item">
+                <a class="nav-link" href="#animate-on-scroll">Animate on Scroll</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#sizing">Sizing</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#background">Background</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#shadows">Shadows</a>
+              </li>
+            </ul>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </div>
+
+  <!-- javascript -->
+  <script src="./assets/js/vendor.bundle.js"></script>
+  <script src="./assets/js/index.bundle.js"></script>
+</body>
+
+</html>
