--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <link rel="shortcut icon" href="" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/favicon/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="/assets/css/libs.bundle.css">
   <link rel="stylesheet" href="./assets/css/index.bundle.css">
 </head>
