creazione tutorial git+github e git+forgejo in html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="it" class="skrollr skrollr-desktop">
 
 <head>
-  <title>Progetto DVCS</title>
+  <title>Progetto DVCS - Home</title>
   <meta name="description" content="Progetto di sistemi e reti per la gestione di un DVCS">
   <meta name="keywords" content="DVCS, Distributed Version Control Systems">
   <meta name="author" content="Belotti, Montanari">
