--- a/git_github.html
+++ b/git_github.html
@@ -158,6 +158,10 @@
                   <div class="p-5">
                     <script type="text/plain" class="language-bash">
                       git push -u origin main
+
+                      # nel caso non funzionasse
+
+                      git push --set-upstream origin master
                     </script>
                   </div>
                 </div>
